--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
+certifi==2021.10.8
+charset-normalizer==2.0.12
+idna==3.3
 joblib==1.1.0
+lxml==4.8.0
+multitasking==0.0.10
 numpy==1.22.2
 pandas==1.4.0
 python-dateutil==2.8.2
 pytz==2021.3
+requests==2.27.1
 scikit-learn==1.0.2
 scipy==1.8.0
 six==1.16.0
 threadpoolctl==3.1.0
+urllib3==1.26.9
+yfinance==0.1.70
