--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,35 @@
+autopep8==1.6.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
+cycler==0.11.0
+flake8==4.0.1
+fonttools==4.33.3
 idna==3.3
 joblib==1.1.0
+kiwisolver==1.4.2
 lxml==4.8.0
+matplotlib==3.5.2
+mccabe==0.6.1
 multitasking==0.0.10
 numpy==1.22.2
+packaging==21.3
 pandas==1.4.0
+Pillow==9.1.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pyparsing==3.0.8
 python-dateutil==2.8.2
 pytz==2021.3
 requests==2.27.1
 scikit-learn==1.0.2
 scipy==1.8.0
+seaborn==0.11.2
 six==1.16.0
 threadpoolctl==3.1.0
+toml==0.10.2
+torch==1.11.0
+torchaudio==0.11.0
+torchvision==0.12.0
+typing_extensions==4.2.0
 urllib3==1.26.9
 yfinance==0.1.70
